# ch-duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: clickhouse.md
scripts/: bootstrap-template.py
src/: ch_duckdb_extension.cpp  clickhouse_attach.cpp  clickhouse_catalog.cpp  clickhouse_storage_extension.cpp  clickhouse_table_function.cpp  clickhouse_transaction.cpp  clickhouse_transaction_manager.cpp  quack_extension.cpp
src/include/: ch_duckdb_extension.hpp  ch_duckdb_zstd_alias.hpp  clickhouse_attach.hpp  clickhouse_catalog.hpp  clickhouse_connection.hpp  clickhouse_scan_table_function.hpp  clickhouse_storage_extension.hpp  clickhouse_table_function.hpp  clickhouse_transaction.hpp  clickhouse_transaction_manager.hpp  quack_extension.hpp
test/: README.md
